Corrected card layout alignment and added logo card image to first card

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ body {
     padding-top: 3.5rem;
 }
 
+.card-img {
+    width: 75%;
+}
+
 .card {
     padding-left: 0px;
     padding-right: 0px;
